# senhordosaneis

./: .gitignore  CLASSES.md  CMakeLists.txt  EXERCICIOS.md  IDEIAS.md  README.md  generic_tester.bat  generic_tester.sh  tester.bat  tester.sh
src/: test.c
tarefas/: converter números  tarefa1.c  tarefa16.c  tarefa17.c  tarefa18.c  tarefa19.c  tarefa2.c  tarefa20.c  tarefa21.c  tarefa3.c  tarefa4.c  tarefa5.c  tarefa_01.c  tarefa_05.c  test.c
