cmake_minimum_required(VERSION 3.28)
project(senhordosaneis C)

set(CMAKE_C_STANDARD 11)

add_executable(test tarefas/test.c)
add_executable(tarefa_01 tarefas/tarefa_01.c)
add_executable(tarefa_02 tarefas/tarefa_02.c)
add_executable(tarefa_03 tarefas/tarefa_03.c)
add_executable(tarefa_04 tarefas/tarefa_04.c)
add_executable(tarefa_05 tarefas/tarefa_05.c)
